Aligned linkedin to right and fixed link

--- a/Homework/HomePage/style.css
+++ b/Homework/HomePage/style.css
@@ -56,8 +56,8 @@ img.over {
     
 } */
 
-a.over {
-    text-align: right;
+#linkedin {
+    float: right;
 }
 
 a:link {
